--- a/view/templates.xml
+++ b/view/templates.xml
@@ -79,22 +79,22 @@
 				</t>
 			</t>
 		</template>
-		<template id="itbampa.report_lunch_event">
+		<template id="itbampa.report_activity_event">
 			<t t-call="report.html_container">
 				<t t-as="o" t-foreach="docs">
 					<t t-call="report.internal_layout">
 						<div class="page">
 							<h1>
 								<i class="fa fa-calendar"></i>
-								Llistat d'assistència al Menjador
+								Activity Attendance Report
 							</h1>
 							<div class="row mb8">
 								<table class="table table-condensed">
 									<thead>
 										<tr class="text-center">
-											<th>Data</th>
-											<th>Recompte</th>
-											<th>Estat</th>
+											<th>Date</th>
+											<th>Count</th>
+											<th>State</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -103,7 +103,7 @@
 												<span t-field="o.name" />
 											</td>
 											<td>
-												<span t-field="o.total_eaters" />
+												<span t-field="o.total_partners" />
 											</td>
 											<td>
 												<span t-field="o.state" />
@@ -116,14 +116,14 @@
 								<table class="table table-condensed">
 									<thead>
 										<tr class="text-center">
-											<th>Ha faltat?</th>
-											<th>Nom</th>
-											<th>Producte</th>
-											<th>Comentaris</th>
+											<th>Is missing?</th>
+											<th>Name</th>
+											<th>Product</th>
+											<th>Comment</th>
 										</tr>
 									</thead>
 									<tbody>
-										<t t-as="m" t-foreach="o.eater_ids">
+										<t t-as="m" t-foreach="o.partner_ids">
 											<tr>
 												<td>
 													<i class="fa fa-square-o"></i>
@@ -132,7 +132,7 @@
 													<span t-field="m.partner_id" />
 												</td>
 												<td>
-													<span t-field="m.lunch_product_id" />
+													<span t-field="m.activity_product_id" />
 												</td>
 												<td>
 													<span t-field="m.comment" />
@@ -147,15 +147,14 @@
 				</t>
 			</t>
 		</template>
-		<template id="itbampa.lunch_monthly_report">
+		<template id="itbampa.activity_monthly_report">
 			<t t-call="report.html_container">
 				<t t-call="report.internal_layout">
 					<div class="page">
 						<t t-foreach="docs" t-as="d">
 							<div class="row">
 								<h1>
-									Llistat
-									<span t-field="d.school_calendar_id"></span>
+									Report for <span t-field="d.school_calendar_id"></span>
 								</h1>
 							</div>
 							<div class="row mt16">
@@ -183,6 +182,7 @@
 									<thead>
 										<tr class="text-center">
 											<th>Member</th>
+											<th>Product</th>
 											<th>Total</th>
 										</tr>
 									</thead>
@@ -191,6 +191,9 @@
 											<tr>
 												<td>
 													<span t-field="l.partner"></span>
+												</td>
+												<td>
+													<span t-field="l.product"></span>
 												</td>
 												<td>
 													<span t-field="l.total"></span>
