Exhaustive update, ready for invoicing section development.

--- a/static/src/css/itbampa.css
+++ b/static/src/css/itbampa.css
@@ -1,3 +1,6 @@
 .navbar-inverse .navbar-nav > li > a {
   color: #f88;
 }
+.openerp .oe_form_editable .oe_save_only, .openerp .oe_form_editable .oe_form_field:empty {
+  display: none !important;
+}
