--- a/view/product_view.xml
+++ b/view/product_view.xml
@@ -1,7 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
+		<!-- Search Product Template -->
+		<record id="product_template_search_view" model="ir.ui.view">
+			<field name="name">product.template.search</field>
+			<field name="model">product.template</field>
+			<field name="inherit_id" ref="product.product_template_search_view" />
+			<field name="arch" type="xml">
+				<xpath expr="//filter[@name='filter_to_sell']" position="before">
+					<filter string="AMPA Products" name="filter_ampa_product"
+						icon="terp-accessories-archiver-minus" domain="[('is_ampa_product','=',1)]" />
+				</xpath>
+			</field>
+		</record>
+		<!--  Product Template Form -->
+		<record id="product_template_form_view" model="ir.ui.view">
+            <field name="name">template.common.form</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_form_view" />
+            <field name="arch" type="xml">
+            	<xpath expr="//field[@name='sale_ok']" position="before">
+	            	<field name="is_ampa_product"/>
+                    <label for="is_ampa_product"/>
+            	</xpath>
+            </field>
+        </record>
+		<!-- Product Template Action -->
+		<record id="product_template_action" model="ir.actions.act_window">
+			<field name="name">Products</field>
+			<field name="type">ir.actions.act_window</field>
+			<field name="res_model">product.template</field>
+			<field name="view_mode">kanban,tree,form</field>
+			<field name="view_type">form</field>
+			<field name="view_id" ref="product.product_template_kanban_view" />
+			<field name="context">{"search_default_filter_ampa_product":1,
+				"default_is_ampa_product":1}</field>
+		</record>
+
 		<!-- Activity Type Menu -->
-		<menuitem id="menu_itbampa_product" name="Products" parent="menu_itbampa_conf" sequence="50" action="product.product_template_action"></menuitem>
+		<menuitem id="menu_itbampa_product" name="Products" parent="menu_itbampa_conf"
+			sequence="50" action="product_template_action"></menuitem>
 	</data>
 </openerp>
